fixed text alignment on the home page in the recipe card

--- a/src/components/Home.styles.scss
+++ b/src/components/Home.styles.scss
@@ -107,6 +107,12 @@
             gap: 2rem;
             margin-top: 1rem;
             width: 100%;
+
+            .details-wrapper {
+                p {
+                    text-align: left;
+                }
+            }
         }
     }
 }
